--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,10 @@
 
     <p><%=homeContent%></p>
 
+    <div class="post">
+        <h1><%=posts[0].postTitle%></h1> 
+        <p><%=posts[0].postContent %></p>
+    </div>
 
     <%- include("./partials/footer.ejs")  %> 
 </body>
