--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,11 +34,20 @@ li{
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	background-color: #1abc9c;
+	color:whitesmoke
 }
 
 .footer p {
 	margin-top: 25px;
 	font-size: 12px;
     color: #fff;
+}
+
+.txtArea{
+    margin-bottom: 10px;
+}
+
+.btnCompose{
+    margin-top: 10px;
+    color:whitesmoke
 }
