--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
 </div>
 <div class="footer-padding"></div>
-  <div class="footer">
+  <div class="footer bg-dark">
     <p>Made by Neezy Industries</p>
   </div>
 </div>
