--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 
     <title>Document</title>
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default bg-light">
       <div class="container">
         <div class="navbar-header">
           <p class="navbar-brand">DAILY JOURNAL</p>
