make posts appear on their own page, Initial version complete

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@ body{
     letter-spacing: 5px;
 }
 .navbar-nav  li a:hover {
-    color: #1abc9c !important;
+    color: black !important;
 }
 
 li{
