--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -13,7 +13,7 @@
 
     <form action="/compose" method="post">
         <label>Title</label>
-        <input type="text" class="form-control" id="titleText" name="titleText" aria-describedby="emailHelp" placeholder="Enter Title of post">
+        <input type="text" class="form-control" id="titleText" name="titleText" aria-describedby="emailHelp" placeholder="Enter Title of post" autocomplete="off">
 
         <label>Post</label> 
         <textarea class=" txtArea form-control" aria-label="With textarea" name="contentText"></textarea>
